add get all events
