# src/main/kotlin/com/e1s/hackathon/controller/EventController.kt
@@ -8,6 +8,7 @@ import com.e1s.hackathon.model.EventDocument
 import com.e1s.hackathon.service.EventService
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
+import org.springframework.web.bind.annotation.GetMapping
 import org.springframework.web.bind.annotation.PostMapping
 import org.springframework.web.bind.annotation.RequestBody
 import org.springframework.web.bind.annotation.RequestMapping
@@ -16,6 +17,12 @@ import org.springframework.web.bind.annotation.RestController
 @RestController
 @RequestMapping("/api/events")
 class EventController(private val eventService: EventService) {
+
+    @GetMapping
+    fun getAllEvents(): ResponseEntity<List<EventDto>> {
+        val events = eventService.getAllEvents()
+        return ResponseEntity.ok(events.map { it.toDto() })
+    }
 
     @PostMapping
     fun createEvent(@RequestBody request: EventCreateRequest): ResponseEntity<EventDto> {
